syntax = "proto3";

package fileservice;

option go_package = "./file_service";

service FileService {
  rpc UploadFile (stream UploadFileRequest) returns (UploadFileResponse);
  rpc DownloadFile (DownloadFileRequest) returns (stream DownloadFileResponse);
  rpc ListFiles (ListFilesRequest) returns (ListFilesResponse);
}

message UploadFileRequest {
  string filename = 1;
  bytes content = 2;
}

message UploadFileResponse {
  string message = 1;
}

message DownloadFileRequest {
  string filename = 1;
}

message DownloadFileResponse {
  bytes content = 1;
}

message ListFilesRequest {}

message ListFilesResponse {
  repeated FileInfo files = 1;
}

message FileInfo {
  string filename = 1;
  string created_at = 2;
  string updated_at = 3;
}
